--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -5,8 +5,18 @@ sources:
     schema: default
     tables:
       - name: jaffle_shop_customers
+        columns:
+          - name: id
+            tests:
+              - unique
+              - not_null
       - name: jaffle_shop_orders_csv
         loaded_at_field: _etl_loaded_at
         freshness:
           warn_after: { count: 12, period: hour }
           error_after: { count: 24, period: hour }
+        columns:
+          - name: id
+            tests:
+              - unique
+              - not_null
