--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,21 +2,26 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: A clone of a Postgres application database.
     schema: default
     tables:
       - name: jaffle_shop_customers
+        description: Raw customers data.
         columns:
           - name: id
+            description: Primary key for customers.
             tests:
               - unique
               - not_null
       - name: jaffle_shop_orders_csv
+        description: Raw orders data.
         loaded_at_field: _etl_loaded_at
         freshness:
           warn_after: { count: 12, period: hour }
           error_after: { count: 24, period: hour }
         columns:
           - name: id
+            description: Primary key for orders.
             tests:
               - unique
               - not_null
